--- a/ModalDialog.razor
+++ b/ModalDialog.razor
@@ -1,5 +1,12 @@
 ﻿
-<div class="modal fade show" id="myModal" style="display:block; background-color: rgba(10,10,10,.7);" aria-modal="true" role="dialog">
+<style>
+    #myModal{
+	    display:block;
+	    background-color: rgba(10,10,10,.7);
+    }
+</style>
+
+<div class="modal fade show" id="myModal" aria-modal="true" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -45,7 +52,7 @@
 	{
 		Ok,
 		OkCancel,
-		DeleteCancel,s
+		DeleteCancel,
 		YesNo
 	}
 
